<resources>
    <string name="app_name">My Books At Home</string>
    <string name="title_cover_nav_header_main_string">My Books At Home</string>
    <string name="subtitle_cover_nav_header_main_string">info@gershon-lehrer.be</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="wanted">wanted</string>
    <string name="owning">owning</string>
   <string name="sold">sold</string>
    <string name="lost">lost</string>
    <string name="author">author</string>
    <string name="Author">Author</string>
    <string name="isbn">ISBN</string>
    <string name="title">title</string>
    <string name="Title">Title</string>
    <string name="publisher">publisher</string>
    <string name="Publisher">Publisher</string>
    <string name="subject">subject</string>
    <string name="Subject">Subject</string>
    <string name="empty_text"></string>
    <string name="Description">Description: </string>
    <string name="description">description</string>
    <string name="short_description">Short Description: </string>

    <string name="ebook">Ebook</string>
    <string name="paperback">paperback</string>
    <string name="hardcover">hardcover</string>
    <string name="nav_all_books">Show all your books</string>
    <string name="nav_search_google_books">Search books on the Google repository</string>
    <string name="db">database</string>
    <string name="book_search_view_textView_string">1 - Please make a selection from the dropwdown menu and select an option\n2 - then enter a keyword to search</string>
    <string name="book_search_view_dialog_textView_string">Please use this dialog to search the repository</string>
    <string name="book_search_view_editText_hint_string">Please enter here your search words</string>
    <string name="empty_book_search_view_textView">You\'ll have to enter something in order to perform a search!!</string>
    <string name="no_author_found">No author found</string>
    <string name="etc_after_book_description">Click for more...</string>
    <string name="sorry_no_google_books_description">No description available</string>
    <string name="book_search_layout_search_button">Search</string>
    <string name="no_returned_authors_google">Unknown author</string>
    <string name="nav_search_page">Search Books via Google</string>
    <string name="Google">Google</string>
    <string name="Amazon">Amazon</string>
    <string name="localDB">Personal Book Repository</string>
    <string name="total_results">Total results retrieved from</string>
    <string name="Author_s">Author(s): </string>
    <string name="No_results_found">No results found</string>
    <string name="could_not_set_up_detector">Could not set up the detector!</string>
    <string name="copy_to_DB">Copy to Local DB</string>
 <string name="delete_from_DB">Delete from Local DB</string>
 <string name="has_been_deleted">Your book (%1$s) has been deleted</string>
 <string name="has_not_been_deleted">Your book (%1$s) has NOT been deleted</string>
    <string name="text_while_google_books_loading">We are working on your list.</string>
    <string name="noInternetConnection">You seem to be offline, please connect to the Internet for the latest updates</string>
    <string name="noInternetForPDF">Please connect to the Internet in order to get the PDF file</string>
    <string name="button_Cancel_text">Cancel</string>
    <string name="ISBN">ISBN</string>
<string name="GooglePreviewLink_HTML_CODE"><![CDATA[<html xmlns="http://www.w3.org/1999/xhtml">
  <head>
    <title>Preview Helper Example</title>
  </head>
  <body>
    <script src="https://books.google.com/books/previewlib.js"></script>
    <script>GBS_setLanguage(\'{{languagePlaceHolder}}\');</script>
    <script>GBS_insertEmbeddedViewer(\'ISBN:{{ISBNPlaceHolder}}\',{{width}},{{height}});</script>
  </body>
</html>]]>
</string>
    <string name="add_to_DB">Add to DB</string>
    <string name="button_add_book_text">Add book</string>
    <string name="nav_search_google_books_with_barcode_scanner">Search with Barcode</string>
    <string name="welcome_message">Welcome and enjoy this app</string>
    <string name="ok_button_in_dialog_search_string">OK</string>
</resources>
